get back into a working state